--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Health CLinic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-       
+       <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="/CSS/fontawesome/css/all.min.css">
     </head>
